style: try out carousel

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,12 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
-
+    <link
+      rel="icon"
+      href="../src/img/bloom_pink.gif"
+      type="image/gif"
+      sizes="16x16"
+    />
     <title>BLOOM</title>
   </head>
   <body>
